Hij deployed build folder niet

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "https://blinkrano.github.io/nieuws-dashboard/",
   "name": "nieuws-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://blinkrano.github.io/nieuws-dashboard",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
